--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "3.4.1"
   },"engines": {
     "node": "14.4.0",
-    "npme": "6.14.5"
+    "npm": "6.14.5",
+    "yarn": "1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
