--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
-  },"engines": {
+    "react-scripts": "^3.4.3"
+  },
+  "engines": {
     "node": "14.4.0",
     "npm": "6.14.5",
     "yarn": "1.22.4"
